--- a/apps/base/linkding/kustomization.yaml
+++ b/apps/base/linkding/kustomization.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.config.k8.io/v1beta
+apiVersion: kustomize.config.k8s.io/v1beta
 kind: Kustomization
 resources:
   - namespace.yaml
