--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -16,3 +16,10 @@ spec:
         - name: linkding
           image: sissbruecker/linkding:1.31.0
           ports:
+          volumeMounts:
+            - name: linkding-data-pvc
+              mountPath: /etc/linkding/data
+      volumes:
+        - name: linkding-data-pvc
+          persistentVolumeClaim:
+            claimName: linkding-data-pvc
