--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -17,9 +17,9 @@ spec:
           image: sissbruecker/linkding:1.31.0
           ports:
           volumeMounts:
-            - name: linkding-data-pvc
+            - name: linkding-data
               mountPath: /etc/linkding/data
       volumes:
-        - name: linkding-data-pvc
+        - name: linkding-data
           persistentVolumeClaim:
             claimName: linkding-data-pvc
