feat(linkding): add persistent storage configuration
- Added a new volume mount for linkding container in deployment.yaml
- Introduced a PersistentVolumeClaim in storage.yaml for linkding data
- Updated kustomization.yaml to include storage.yaml

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -16,3 +16,11 @@ spec:
         - name: linkding
           image: sissbruecker/linkding:1.31.0
           ports:
+            - containerPort: 9090
+          volumeMounts:
+            - name: linkding-data
+              mountPath: /etc/linkding/data
+      volumes:
+        - name: linkding-data
+          persistentVolumeClaim:
+            claimName: linkding-data-pvc
