--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -13,9 +13,9 @@ spec:
         app: linkding
     spec:
       securityContext:
-        fsGroup: 33
-        runAsUser: 33
-        runAsGroup: 33
+        fsGroup: 33 # www-data group ID
+        runAsUser: 33 # www-data group ID
+        runAsGroup: 33 # www-data group ID
       containers:
         - name: linkding
           image: sissbruecker/linkding:1.31.0
