--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -21,6 +21,9 @@ spec:
           image: sissbruecker/linkding:1.31.0
           ports:
             - containerPort: 9090
+          envFrom:
+            - secretRef:
+                name: linkding-container-env
           volumeMounts:
             - name: linkding-data
               mountPath: /etc/linkding/data
