--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 namespace: linkding
 resources:
   - ../../base/linkding
-  - cloudflare.yaml
+  # - cloudflare.yaml
   - cloudflare-secret.yaml
   - login-secret.yaml
