feat: add ingress resource for linkding

--- a/apps/staging/linkding/kustomization.yaml
+++ b/apps/staging/linkding/kustomization.yaml
@@ -4,5 +4,6 @@ namespace: linkding
 resources:
   - ../../base/linkding
   # - cloudflare.yaml
+  - ingress.yaml
   - cloudflare-secret.yaml
   - login-secret.yaml
