fix: add web entry point annotation to linkding ingress

--- a/apps/staging/linkding/ingress.yaml
+++ b/apps/staging/linkding/ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: linkding
   namespace: linkding
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   ingressClassName: traefik
   rules:
