feat(linkding): add node affinity to deployment
Added node affinity to the linkding deployment to ensure that pods are
not scheduled on control-plane nodes. This change improves the
distribution of workloads across the cluster.

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -12,6 +12,13 @@ spec:
       labels:
         app: linkding
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: node-role.kubernetes.io/control-plane
+                    operator: DoesNotExist
       securityContext:
         fsGroup: 33 # www-data group ID
         runAsUser: 33 # www-data group ID
