feat(linkding): update node selector and add PV
- Changed node selector key to `k3s.io/hostname` and operator to `NotIn`
  with value `piai` in deployment.yaml
- Added PersistentVolume definition in storage.yaml with node affinity
  for `pi5-server`
- Linked PersistentVolumeClaim to the new PersistentVolume

--- a/apps/base/linkding/storage.yaml
+++ b/apps/base/linkding/storage.yaml
@@ -1,10 +1,28 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: linkding-data-pv
+spec:
+  accessModes:
+    - ReadWriteOnce
+  capacity:
+    storage: 1Gi
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: k3s.io/hostname
+              operator: "In"
+              values: ["pi5-server"]
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: linkding-data-pvc
 spec:
   accessModes:
     - ReadWriteOnce
+  volumeName: linkding-data-pv
   resources:
     requests:
       storage: 1Gi
