--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -17,8 +17,9 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
-                  - key: node-role.kubernetes.io/control-plane
-                    operator: DoesNotExist
+                  - key: k3s.io/hostname
+                    operator: "NotIn"
+                    values: ["piai"]
       securityContext:
         fsGroup: 33 # www-data group ID
         runAsUser: 33 # www-data group ID
