--- a/apps/base/linkding/storage.yaml
+++ b/apps/base/linkding/storage.yaml
@@ -3,26 +3,33 @@ kind: PersistentVolume
 metadata:
   name: linkding-data-pv
 spec:
-  accessModes:
-    - ReadWriteOnce
   capacity:
     storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: manual
+  volumeMode: Filesystem
+  local:
+    path: /data/linkding
   nodeAffinity:
     required:
       nodeSelectorTerms:
         - matchExpressions:
             - key: k3s.io/hostname
-              operator: "In"
+              operator: In
               values: ["pi5-server"]
+
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: linkding-data-pvc
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
-  volumeName: linkding-data-pv
   resources:
     requests:
       storage: 1Gi
+  volumeName: linkding-data-pv
