feat(mb-intake): add cloudflare integration
- Added cloudflare-secret.yaml for storing encrypted credentials.
- Created cloudflare.yaml for deploying cloudflared with necessary configs.
- Introduced ingress.yaml for routing traffic to mb-intake service.
- Updated kustomization.yaml to include new cloudflare and ingress resources.

--- a/apps/staging/mb-intake/kustomization.yaml
+++ b/apps/staging/mb-intake/kustomization.yaml
@@ -4,3 +4,6 @@ namespace: mb-intake
 resources:
   - ../../base/mb-intake
   - mb-admin-mongo-env.yaml
+  - cloudflare.yaml
+  - ingress.yaml
+  - cloudflare-secret.yaml
